# internal/daemon/controller/api/workflow/handler.go
@@ -4,22 +4,30 @@ import (
 	"context"
 	"encoding/json"
 	"errors"
+	"slices"
 	"time"
 
 	"github.com/google/uuid"
 	"github.com/jackc/pgtype"
 
+	"github.com/davidsbond/orca/internal/daemon/controller/database/task"
 	"github.com/davidsbond/orca/internal/daemon/controller/database/workflow"
 )
 
 type (
 	Handler struct {
 		workflows Repository
+		tasks     TaskRepository
 	}
 
 	Repository interface {
 		Get(ctx context.Context, id string) (workflow.Run, error)
 		Save(ctx context.Context, run workflow.Run) error
+		ListForWorkflowRun(ctx context.Context, id string) ([]workflow.Run, error)
+	}
+
+	TaskRepository interface {
+		ListForWorkflowRun(ctx context.Context, runID string) ([]task.Run, error)
 	}
 )
 
@@ -27,9 +35,10 @@ var (
 	ErrNotFound = errors.New("not found")
 )
 
-func NewHandler(workflows Repository) *Handler {
+func NewHandler(workflows Repository, tasks TaskRepository) *Handler {
 	return &Handler{
 		workflows: workflows,
+		tasks:     tasks,
 	}
 }
 
@@ -66,4 +75,80 @@ func (h *Handler) GetRun(ctx context.Context, runID string) (workflow.Run, error
 	default:
 		return run, nil
 	}
+}
+
+func (h *Handler) DescribeRun(ctx context.Context, runID string) (Description, error) {
+	root, err := h.workflows.Get(ctx, runID)
+	switch {
+	case errors.Is(err, workflow.ErrNotFound):
+		return Description{}, ErrNotFound
+	case err != nil:
+		return Description{}, err
+	}
+
+	description := Description{
+		Run: root,
+	}
+
+	taskRuns, err := h.tasks.ListForWorkflowRun(ctx, runID)
+	if err != nil {
+		return Description{}, err
+	}
+
+	for _, taskRun := range taskRuns {
+		description.Actions = append(description.Actions, Action{
+			TaskRun: &taskRun,
+		})
+	}
+
+	workflowRuns, err := h.workflows.ListForWorkflowRun(ctx, runID)
+	if err != nil {
+		return Description{}, err
+	}
+
+	for _, workflowRun := range workflowRuns {
+		d, err := h.DescribeRun(ctx, workflowRun.ID)
+		if err != nil {
+			return Description{}, err
+		}
+
+		description.Actions = append(description.Actions, Action{
+			WorkflowRun: &d,
+		})
+	}
+
+	slices.SortFunc(description.Actions, func(a, b Action) int {
+		var (
+			aCreated time.Time
+			bCreated time.Time
+		)
+
+		if a.WorkflowRun != nil {
+			aCreated = a.WorkflowRun.Run.CreatedAt
+		}
+
+		if b.WorkflowRun != nil {
+			bCreated = b.WorkflowRun.Run.CreatedAt
+		}
+
+		if a.TaskRun != nil {
+			aCreated = a.TaskRun.CreatedAt
+		}
+
+		if b.TaskRun != nil {
+			bCreated = b.TaskRun.CreatedAt
+		}
+
+		if aCreated.Before(bCreated) {
+			return -1
+		}
+
+		if bCreated.Before(aCreated) {
+			return 1
+		}
+
+		return 0
+	})
+
+	return description, nil
 }
